--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: Leitura-Grot2;
     src: url(LeituraSans-Grot2.otf);
@@ -36,21 +35,15 @@
         margin: 3px;
     }
 
-    .btn3{
-
-    }
-
     .custom-select{
-        background-color: transparent;
+        background-color: black;
         color:white;
-        border: 1.5px solid #ec407a;
-        border-radius: 40px;
-        line-height: 1.3;
-        letter-spacing: 0.1em;
-        transition: all 1s ease;
-         background: transparent;
-         color: wheat;
-
+   border: 1.5px solid rgb(255, 255, 255);
+   border-radius: 40px;
+   line-height: 1.3;
+   letter-spacing: 0.1em;
+   transition: all 1s ease;
+    color: wheat;
     }
 
     #root {
@@ -65,7 +58,7 @@
     .card{
         margin: 30px 10px 10px 10px;
         width: 30px;
-        height: 500px;
+        height: 540px;
         background-color: black;
         border-radius: 4px;
         color: white;
@@ -105,10 +98,7 @@
     border-color: whitesmoke;
     border-radius: 4px;
 }
-.custom-select{
-    background-color: #ec407a;
-    color: whitesmoke;
-}
+
 #root {
     display: flex;
     justify-content: center;
@@ -125,4 +115,3 @@
 .img1{
     border-radius: 2px;
 }
-
